# gen_pro_v2

./: pyproject.toml
docker/: .dockerignore  .env  Dockerfile  docker-compose.yml
src/: requirements.txt
src/app/: __init__db.py  config.py  database.py  main.py  models.py  schemas.py
src/app/routers/: __init__.py  admin.py  articles.py  comments.py  favorites.py  followers.py  tags.py  users.py
src/app/schemas/: __init__.py  article.py  comment.py  favorite.py  tag.py  user.py  wrappers.py
src/app/static/: index.html
